# skema

./: .gitignore  Changelog  History.txt  License.txt  MIT-LICENSE  Manifest.txt  README  README.txt  install.sh  release.sh  skema.rb
config/: hoe.rb  requirements.rb
gpl/templates/: file
install/: install.rb
install/templates/: script.sh  skemarc
kapp/: kapp.rb
kapp/templates/: main.cpp
lib/: skema.rb
lib/modules/gpl/: gpl.rb
lib/modules/kapp/templates/: CMakeLists.txt  appui.rc
lib/modules/lgpl/templates/: file
lib/modules/skemaconfig/: skemaconfig.rb
lib/modules/skemaconfig/templates/: skemarc
lib/skema/: version.rb
script/: txt2html
test/: test_helper.rb  test_skema.rb
website/: doap.rdf  index.html  index.txt  template.rhtml
website/stylesheets/: screen.css
